--- a/amqcfg/profiles/artemis/2.5.0/_modules/artemis_profile/performance/_selector.yaml
+++ b/amqcfg/profiles/artemis/2.5.0/_modules/artemis_profile/performance/_selector.yaml
@@ -1,4 +1,6 @@
-{% if profile == 'baseline' %}
+{% if profile == 'default' %}
+  {% include 'artemis/2.5.0/_modules/artemis_profile/default.yaml' %}
+{% elif profile == 'baseline' %}
   {% include 'artemis/2.5.0/_modules/artemis_profile/performance_baseline.yaml' %}
 {% elif profile == 'params' %}
   {% include 'artemis/2.5.0/_modules/artemis_profile/performance_params.yaml' %}
