--- a/amqcfg/profiles/artemis/2.6.0/security/gssapi/msgqe.com.yaml
+++ b/amqcfg/profiles/artemis/2.6.0/security/gssapi/msgqe.com.yaml
@@ -4,17 +4,10 @@ _defaults:
   broker_name: amq
   broker_home: /opt/artemis-2.6.0
   broker_instance: /opt/artemis-2.6.0-i0
-
-  log_level_all: INFO
-  log_level_root: INFO
-  log_level_server: INFO
-  log_level_journal: INFO
-  log_level_utils: INFO
-  log_level_jms: INFO
-  log_level_integration: INFO
-  log_level_jetty: WARN
-  log_level_handler_console: DEBUG
-  log_level_handler_file: DEBUG
+  jvm_vendor_ibm: false
+  jvm_vendor_short_name: sun
+  jvm_vendor_gssapi_is_initiator_key: isInitiator
+  jvm_vendor_gssapi_is_initiator_value: false
 
 render:
   generator_notice: True
@@ -32,6 +25,9 @@ broker_xml:
   disk_scan_period: 5000
   max_disk_usage: 90
 #  global_max_size: 2GB
+
+
+{% include 'artemis/2.6.0/security/gssapi/jdk_gssapi/_selector.yaml' %}
 
 {% include 'artemis/2.6.0/_modules/broker_xml/critical_analyzer_default.yaml' %}
 
