--- a/amqcfg/profiles/artemis/2.6.0/security/gssapi/my.realm.yaml
+++ b/amqcfg/profiles/artemis/2.6.0/security/gssapi/my.realm.yaml
@@ -4,23 +4,16 @@ _defaults:
   broker_name: amq
   broker_home: /opt/artemis-2.6.0
   broker_instance: /opt/artemis-2.6.0-i0
-  jvm_vendor_ibm: true
   gssapi_broker_keytab_path: /path/to/my_keytabs/mybroker.keytab
   gssapi_broker_principal: amqp/mybroker.myrealm.com
   gssapi_sasl_login_config_scope: krb5loginconfig
   gssapi_conf_file_path: /path/to/my_krb5.conf
-
-# TODO remove following variables -> tmp fix for MSGQE-6245
-  jvm_vendor_short_name: sun
-  jvm_vendor_gssapi_is_initiator_key: isInitiator
-  jvm_vendor_gssapi_is_initiator_value: false
+  jvm_vendor: sun
 
 render:
   generator_notice: True
   licenses: True
   template: artemis/2.6.0
-
-{% include 'artemis/2.6.0/_modules/security/jdk_gssapi/_selector.yaml' %}
 
 broker_xml:
   name: '{{ broker_name }}'
@@ -56,7 +49,7 @@ broker_xml:
 {% include 'artemis/2.6.0/_modules/bootstrap_xml/allow.yaml' %}
 
 # jolokia-access.xml
-{% include 'artemis/2.6.0/_modules/jolokia_access/localhost.yaml' %}
+{% include 'artemis/2.6.0/_modules/jolokia_access/allow.yaml' %}
 
 # logging.properties
 {% include 'artemis/2.6.0/_modules/logging_properties/default.yaml' %}
