--- a/amqcfg/profiles/artemis/2.6.0/security/gssapi_ldap/my.realm.yaml
+++ b/amqcfg/profiles/artemis/2.6.0/security/gssapi_ldap/my.realm.yaml
@@ -2,15 +2,13 @@
 
 _defaults:
   broker_name: amq
-  broker_home: /opt/amq-broker-7.2.0
-  broker_instance: /opt/amq-broker-7.2.0-i0
-  cluster_multicast_address: 233.7.7.9
-  cluster_multicast_port: 9876
-  cluster_connector_protocol: tcp
-  cluster_connector_address: 0.0.0.0
-  cluster_connector_port: 61616
-  log_level_all: INFO
-  cluster_load_balancing: 'OFF'
+  broker_home: /opt/artemis-2.6.0
+  broker_instance: /opt/artemis-2.6.0-i0
+  gssapi_broker_keytab_path: /path/to/my_keytabs/mybroker.keytab
+  gssapi_broker_principal: amqp/mybroker.myrealm.com
+  gssapi_sasl_login_config_scope: krb5loginconfig
+  gssapi_conf_file_path: /path/to/my_krb5.conf
+  jvm_vendor: sun
 
 render:
   generator_notice: True
@@ -27,28 +25,28 @@ broker_xml:
   large_messages_directory: data/large-messages
   disk_scan_period: 5000
   max_disk_usage: 90
+#  global_max_size: 2GB
+
 
 {% include 'artemis/2.6.0/_modules/broker_xml/critical_analyzer_default.yaml' %}
 
-{% include 'artemis/2.6.0/_modules/broker_xml/acceptors/default.yaml' %}
+{% include 'artemis/2.6.0/_modules/broker_xml/acceptors/gssapi.yaml' %}
 
-{% include 'artemis/2.6.0/_modules/users_roles_security/admin_broker_security_settings.yaml' %}
+{% include 'artemis/2.6.0/_modules/users_roles_security/gssapi_security_settings.yaml' %}
 
 {% include 'artemis/2.6.0/_modules/broker_xml/address_settings/default.yaml' %}
 
 {% include 'artemis/2.6.0/_modules/broker_xml/addresses/default.yaml' %}
 
-{% include 'artemis/2.6.0/_modules/broker_xml/cluster/basic_cluster.yaml' %}
-
 
 # artemis.profile
-{% include 'artemis/2.6.0/_modules/artemis_profile/default.yaml' %}
+{% include 'artemis/2.6.0/_modules/artemis_profile/gssapi.yaml' %}
 
 # users and roles properties xml
-{% include 'artemis/2.6.0/_modules/users_roles_security/admin.yaml' %}
+{% include 'artemis/2.6.0/_modules/users_roles_security/test_users.yaml' %}
 
 # bootstrap.xml
-{% include 'amq_broker/7.2.0/_modules/bootstrap_xml/allow.yaml' %}
+{% include 'artemis/2.6.0/_modules/bootstrap_xml/allow.yaml' %}
 
 # jolokia-access.xml
 {% include 'artemis/2.6.0/_modules/jolokia_access/allow.yaml' %}
@@ -57,7 +55,7 @@ broker_xml:
 {% include 'artemis/2.6.0/_modules/logging_properties/default.yaml' %}
 
 # login.config
-{% include 'artemis/2.6.0/_modules/login_config/jaas_required.yaml' %}
+{% include 'artemis/2.6.0/_modules/login_config/gssapi_ldap_jaas.yaml' %}
 
 # management.xml
 {% include 'artemis/2.6.0/_modules/management_xml/default_connector.yaml' %}
