--- a/amqcfg/profiles/artemis/2.5.0/security/gssapi/my.realm.yaml
+++ b/amqcfg/profiles/artemis/2.5.0/security/gssapi/my.realm.yaml
@@ -19,6 +19,7 @@ render:
   generator_notice: True
   licenses: True
   template: artemis/2.5.0
+  profile_path: '{{ profile_path }}'
 
 {% include 'artemis/2.5.0/_modules/security/jdk_gssapi/_selector.yaml' %}
 
