--- a/amqcfg/profiles/artemis/2.6.0/ha/replication.yaml
+++ b/amqcfg/profiles/artemis/2.6.0/ha/replication.yaml
@@ -21,6 +21,7 @@ render:
   generator_notice: True
   licenses: True
   template: artemis/2.6.0
+  profile_path: '{{ profile_path }}'
 
 broker_xml:
   name: '{{ broker_name }}'
