--- a/amqcfg/profiles/artemis/2.9.0/_modules/bootstrap_xml/allow.yaml
+++ b/amqcfg/profiles/artemis/2.9.0/_modules/bootstrap_xml/allow.yaml
@@ -16,3 +16,5 @@ bootstrap_xml:
       war: artemis-plugin.war
     - url: console
       war: console.war
+    - url: metrics
+      war: metrics.war
