NEW: tox with flake8, mypy, coverage, yamllint
Adjusted tox configuration to run
 - flake8
 - mypy
 - yamllint

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,16 @@ jinja2
 
 # Testing Requirements
 pytest
+flake8
+mypy
 mock
 tox
+coverage
+yamllint
 
 # Committing Requirements
 pre-commit
 
 # Optionals
 colorlog
+colorama
