--- a/tox.ini
+++ b/tox.ini
@@ -4,18 +4,41 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py37, py38, mypy, pypy3
-
-[testenv]
-deps =
-    pytest
-    mock
-commands = pytest
+envlist = yaml, flake8, py37, py38, pypy3, mypy
 
 [pytest]
 addopts = -ra -q
 testpaths =
     tests
+
+[testenv]
+deps =
+    -r{toxinidir}/requirements.txt
+commands = pytest
+
+[testenv:flake8]
+deps = flake8
+commands = flake8 --exit-zero
+
+[testenv:yaml]
+deps = yamllint
+commands = yamllint ./src
+
+[testenv:mypy]
+deps = mypy
+commands =
+    mypy src --ignore-missing-imports
+
+[testenv:pre-commit]
+deps =
+    pre-commit
+commands =
+    pre-commit {posargs:run --all-files}
+
+[flake8]
+max-line-length = 160
+exclude = .*, tests/*, docs/*, venv/*
+max-complexity = 10
 
 [gh-actions]
 python =
