UPD: Tox configuration Github Actions

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = yaml, flake8, py37, py38, pypy3, mypy
+envlist = yaml, flake8, py36, py37, py38, pypy3, mypy
 
 [pytest]
 addopts = -ra -q
@@ -42,6 +42,7 @@ max-complexity = 10
 
 [gh-actions]
 python =
-    3.7: py37, docs
-    3.8: py38, lint, manifest, mypy
+    3.6: py36
+    3.7: py37
+    3.8: py38, flake8, yaml, mypy
     pypy3: pypy3
