--- a/.github/workflows/master.dev.release.workflow.yaml
+++ b/.github/workflows/master.dev.release.workflow.yaml
@@ -27,7 +27,7 @@ jobs:
         sed "s/VERSION =.*/VERSION = '${GITHUB_REF##*/}-$GITHUB_SHA'/g"
         python setup.py sdist bdist_wheel
     - name: "Publish package to TestPyPI"
-      uses: pypa/gh-action-pypi-publish@master
+      uses: pypa/gh-action-pypi-publish@v1.3.1
       with:
         skip_existing: true
         user: __token__
