--- a/.github/workflows/install.workflow.yaml
+++ b/.github/workflows/install.workflow.yaml
@@ -1,11 +1,18 @@
-install:
+---
+name: "Package installation"
+
+on:
+  push:
+    branches:
+      - master
+
+jobs:
+  install:
     strategy:
       matrix:
         os: ["ubuntu-latest", "windows-latest", "macos-latest"]
-
     name: "Verify that package can be installed"
     runs-on: "${{ matrix.os }}"
-
     steps:
       - uses: "actions/checkout@v2"
       - uses: "actions/setup-python@v2"
