NEW(profile_test) script for testing generating,exporting,tuning profiles

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,3 +30,9 @@ repos:
     language: python
     additional_dependencies: [tox]
     pass_filenames: false
+  - id: profiles
+    name: profiles
+    entry: bash profile_test.sh
+    files: ^(.*profiles.*yaml(.jinja2)?)$
+    language: system
+    pass_filenames: true
