--- a/tox.ini
+++ b/tox.ini
@@ -58,6 +58,11 @@ deps = pre-commit
 commands =
     pre-commit {posargs:run --all-files}
 
+[testenv:profile-test]
+allowlist_externals = bash
+deps = bash
+commands = bash profile_test.sh
+
 [testenv:docs]
 description = Build docs
 extras = docs
