--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,3 +5,4 @@ recursive-include tests *.py
 recursive-include docs *.md
 recursive-include docs *.rst
 recursive-include docs *.yml
+exclude profile_test.sh
