--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
 include README.md
-recursive-include yacfg/profiles *
-recursive-include yacfg/templates *
+recursive-include src/yacfg/profiles *
+recursive-include src/yacfg/templates *
