ADD docs build to tox

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = yaml, flake8, py36, py37, py38, pypy3, mypy
+envlist = docs, yaml, flake8, py36, py37, py38, pypy3, mypy
 
 [pytest]
 addopts = -ra -q
@@ -34,6 +34,12 @@ deps =
     pre-commit
 commands =
     pre-commit {posargs:run --all-files}
+
+[testenv:docs]
+deps =
+    jupyter-book
+commands =
+    jupyter-book build ./docs
 
 [flake8]
 max-line-length = 160
