ADD docs build to gh-actions env

--- a/tox.ini
+++ b/tox.ini
@@ -50,5 +50,5 @@ max-complexity = 10
 python =
     3.6: py36
     3.7: py37
-    3.8: py38, flake8, yaml, mypy
+    3.8: py38, flake8, yaml, docs, mypy
     pypy3: pypy3
