--- a/.github/workflows/master.pull_request.workflow.yaml
+++ b/.github/workflows/master.pull_request.workflow.yaml
@@ -33,7 +33,7 @@ jobs:
         run: tox
       - name: "Build package"
         run: |
-          sed -i "s/VERSION =.*/VERSION = '${GITHUB_REF##*/}-$GITHUB_SHA'/g" ./src/yacfg/meta.py
+          sed -i "s/VERSION =.*/VERSION = 'PR-$GITHUB_SHA::8'/g" ./src/yacfg/meta.py
           python setup.py sdist bdist_wheel
       - name: "Upload artifacts"
         uses: actions/upload-artifact@v2
