--- a/.github/workflows/master.push.workflow.yaml
+++ b/.github/workflows/master.push.workflow.yaml
@@ -37,11 +37,16 @@ jobs:
         run: |
           sed -i "s/VERSION =.*/VERSION = 'master-$GITHUB_SHA::8'/g" ./src/yacfg/meta.py
           python setup.py sdist bdist_wheel
-      - name: "Upload artifacts"
+      - name: "Upload dist artifacts"
         uses: actions/upload-artifact@v2
         with:
           name: package-dist
           path: dist/
+      - name: "Upload docs artifacts"
+        uses: actions/upload-artifact@v2
+        with:
+          name: docs_html
+          path: docs/_build/html
       - name: "Publish package to TestPyPI"
         uses: pypa/gh-action-pypi-publish@v1.3.1
         with:
