UPD GitHub Actions always upload artifacts

--- a/.github/workflows/master.pull_request.workflow.yaml
+++ b/.github/workflows/master.pull_request.workflow.yaml
@@ -36,12 +36,14 @@ jobs:
           sed -i "s/VERSION =.*/VERSION = 'PR-$GITHUB_SHA::8'/g" ./src/yacfg/meta.py
           python setup.py sdist bdist_wheel
       - name: "Upload dist artifacts"
+        if: always()
         uses: actions/upload-artifact@v2
         with:
           name: package-dist
           path: dist/
 
       - name: "Upload docs artifacts"
+        if: always()
         uses: actions/upload-artifact@v2
         with:
           name: docs_html
