UPD GitHub Actions rebuild only when changes in docs

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -4,6 +4,8 @@ name: "Deploy docs"
 # Only run this when the master branch changes
 on:
   push:
+    paths:
+      - 'docs/**'
     branches:
       - master
 
