--- a/tox.ini
+++ b/tox.ini
@@ -4,17 +4,31 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = docs, yaml, flake8, py36, py37, py38, pypy3, mypy
+envlist = yaml, flake8, py36, py37, py38, pypy3, mypy, docs, manifest, coverage-report
 
 [pytest]
-addopts = -ra -q
-testpaths =
-    tests
+addopts = -ra -vv --cov=src --cov-report=xml
+testpaths = tests
+
+[flake8]
+max-line-length = 160
+exclude = .*, tests/*, docs/*, venv/*
+max-complexity = 10
+
+[gh-actions]
+python =
+    3.6: py36
+    3.7: py37 docs
+    3.8: py38, flake8, yaml, mypy, manifest
+    pypy3: pypy3
 
 [testenv]
-deps =
-    -r{toxinidir}/requirements.txt
-commands = pytest
+extras = testing
+setenv =
+    PYTHONUNBUFFERED=yes
+description = Run tests and measure coverage
+deps = -r{toxinidir}/requirements.txt
+commands = pytest {posargs}
 
 [testenv:flake8]
 deps = flake8
@@ -25,30 +39,35 @@ deps = yamllint
 commands = yamllint ./src
 
 [testenv:mypy]
+description = Check types
 deps = mypy
-commands =
-    mypy src --ignore-missing-imports
+basepython = python3.8
+commands = mypy src --ignore-missing-imports
+
+[testenv:manifest]
+description = Ensure MANIFEST.in is up to date.
+basepython = python3.8
+deps = check-manifest
+commands = check-manifest
 
 [testenv:pre-commit]
-deps =
-    pre-commit
+description = Run all pre-commit hooks
+basepython = python3.8
+skip_install = true
+deps = pre-commit
 commands =
     pre-commit {posargs:run --all-files}
 
 [testenv:docs]
-deps =
-    jupyter-book
+description = Build docs
+extras = docs
+deps = jupyter-book
+commands = jupyter-book build ./docs
+
+[testenv:coverage-report]
+description = Report coverage over all test runs.
+basepython = python3.8
+deps = coverage
+skip_install = true
 commands =
-    jupyter-book build ./docs
-
-[flake8]
-max-line-length = 160
-exclude = .*, tests/*, docs/*, venv/*
-max-complexity = 10
-
-[gh-actions]
-python =
-    3.6: py36
-    3.7: py37
-    3.8: py38, flake8, yaml, docs, mypy
-    pypy3: pypy3
+    coverage report
