--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,7 @@
-include README.md
+include *.yml *.yaml *.ini LICENSE README.md requirements.txt
 recursive-include src/yacfg/profiles *
 recursive-include src/yacfg/templates *
+recursive-include tests *.py
+recursive-include docs *.md
+recursive-include docs *.rst
+recursive-include docs *.yml
