ADD Coverage with Codecov to GitHub Actions

--- a/.github/workflows/released.install.workflow.yaml
+++ b/.github/workflows/released.install.workflow.yaml
@@ -6,7 +6,7 @@ on:
     types: [published]
 
 jobs:
-  install:
+  released-install:
     name: "Verify that package can be installed"
     runs-on: "ubuntu-latest"
     steps:
