--- a/.github/workflows/master.push.workflow.yaml
+++ b/.github/workflows/master.push.workflow.yaml
@@ -13,6 +13,7 @@ jobs:
     runs-on: "ubuntu-latest"
     env:
       USING_COVERAGE: '3.6,3.8'
+      TESTPYPI_PUBLISH: '3.8'
 
     strategy:
       matrix:
@@ -32,6 +33,17 @@ jobs:
           python -m pip install --upgrade coverage[toml] virtualenv tox tox-gh-actions
       - name: "Run tox targets for ${{ matrix.python-version }}"
         run: tox
+      - name: "Get coverage"
+        run: |
+          set -xe
+          coverage combine
+          coverage xml
+        if: "contains(env.USING_COVERAGE, matrix.python-version)"
+      - name: "Upload coverage to Codecov"
+        if: "contains(env.USING_COVERAGE, matrix.python-version)"
+        uses: "codecov/codecov-action@v1"
+        with:
+          fail_ci_if_error: true
       - name: "Build package"
         id: build
         run: |
@@ -50,6 +62,7 @@ jobs:
           name: docs_html
           path: docs/_build/html
       - name: "Publish package to TestPyPI"
+        if: "contains(env.TESTPYPI_PUBLISH, matrix.python-version)"
         uses: pypa/gh-action-pypi-publish@v1.3.1
         with:
           skip_existing: true
