--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,7 @@ max-complexity = 10
 [gh-actions]
 python =
     3.6: py36
-    3.7: py37 docs
+    3.7: py37, docs
     3.8: py38, flake8, yaml, mypy, manifest
     pypy3: pypy3
 
