--- a/.github/workflows/master.push.workflow.yaml
+++ b/.github/workflows/master.push.workflow.yaml
@@ -36,7 +36,6 @@ jobs:
       - name: "Get coverage"
         run: |
           set -xe
-          coverage combine
           coverage xml
         if: "contains(env.USING_COVERAGE, matrix.python-version)"
       - name: "Upload coverage to Codecov"
@@ -47,6 +46,7 @@ jobs:
       - name: "Build package"
         id: build
         run: |
+          set -xe
           sed -i "s/VERSION =.*/VERSION = 'master-$GITHUB_SHA::8'/g" ./src/yacfg/meta.py
           python setup.py sdist bdist_wheel
       - name: "Upload dist artifacts"
