FIX Coverage pytest

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@
 envlist = yaml, flake8, py36, py37, py38, pypy3, mypy, docs, manifest, coverage-report
 
 [pytest]
-addopts = -ra -vv --cov=src --cov-report=xml
+addopts = -ra -vv --cov=yacfg --cov=yacfg_batch --cov-report=xml
 testpaths = tests
 
 [flake8]
