UPD GitHub Actions temporary disable stable release

--- a/.github/workflows/stable.release.workflow.yaml
+++ b/.github/workflows/stable.release.workflow.yaml
@@ -1,12 +1,12 @@
 ---
 name: "Publish release"
 
-on:
-  push:
-    branches:
-      - stable
-    tags:
-      - 'v*'
+#on:
+#  push:
+#    branches:
+#      - stable
+#    tags:
+#      - 'v*'
 
 jobs:
   publish-release:
