--- a/.github/workflows/master.pull_request.workflow.yaml
+++ b/.github/workflows/master.pull_request.workflow.yaml
@@ -30,7 +30,9 @@ jobs:
           python -m pip install --upgrade pip setuptools wheel
           python -m pip install --upgrade coverage[toml] virtualenv tox tox-gh-actions
       - name: "Run tox targets for ${{ matrix.python-version }}"
-        run: tox
+        run: |
+          export YACFG_PROJECT_ROOT=$PWD
+          tox
       - name: "Get coverage"
         run: |
           set -xe
