--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,6 +2,7 @@ include *.yml *.yaml *.ini LICENSE README.md requirements.txt
 recursive-include src/yacfg/profiles *
 recursive-include src/yacfg/templates *
 recursive-include tests *.py
+recursive-include tests *.yaml
 recursive-include docs *.md
 recursive-include docs *.rst
 recursive-include docs *.yml
