UPD(tox) Fixing the testenv path, dependencies, pypy

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,8 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = yaml, flake8, py36, py37, py38, pypy3, mypy, docs, manifest, coverage-report
+envlist = yaml, flake8, py36, py37, py38, mypy, docs, manifest, coverage-report
+toxworkdir=/tmp/.tox.yacfg/
 
 [pytest]
 addopts = -ra -vv --cov=yacfg --cov=yacfg_batch --cov-report=xml
@@ -20,26 +21,34 @@ python =
     3.6: py36
     3.7: py37, docs
     3.8: py38, flake8, yaml, mypy, manifest
+    3.9: py39, flake8, yaml, mypy, manifest
     pypy3: pypy3
 
 [testenv]
-passenv = YACFG_PROJECT_ROOT
+changedir = tests
 extras = testing
-setenv =
-    PYTHONUNBUFFERED=yes
+setenv = PYTHONUNBUFFERED=yes
 description = Run tests and measure coverage
-deps = -r{toxinidir}/requirements.txt
-commands = pytest {posargs}
+deps =
+    pytest
+    pytest-cov
+    mock
+    pyyaml
+    jinja2
+commands = pytest --basetemp="{envtmpdir}" {posargs}
 
 [testenv:flake8]
+changedir = src/
 deps = flake8
 commands = flake8 --exit-zero
 
 [testenv:yaml]
+changedir = src/
 deps = yamllint
-commands = yamllint ./src
+commands = yamllint .
 
 [testenv:mypy]
+changedir = .
 description = Check types
 deps = mypy
 basepython = python3.8
@@ -47,33 +56,37 @@ commands = mypy src --ignore-missing-imports
 
 [testenv:manifest]
 description = Ensure MANIFEST.in is up to date.
+changedir = .
 basepython = python3.8
 deps = check-manifest
-commands = check-manifest
+commands = check-manifest {posargs}
 
 [testenv:pre-commit]
 description = Run all pre-commit hooks
+changedir = .
 basepython = python3.8
 skip_install = true
 deps = pre-commit
-commands =
-    pre-commit {posargs:run --all-files}
+commands = pre-commit {posargs:run --all-files}
 
 [testenv:profile-test]
+changedir = .
 allowlist_externals = bash
 deps = bash
 commands = bash profile_test.sh
 
 [testenv:docs]
 description = Build docs
+changedir = .
+basepython = python3.8
 extras = docs
 deps = jupyter-book
 commands = jupyter-book build ./docs
 
 [testenv:coverage-report]
 description = Report coverage over all test runs.
+changedir = .
 basepython = python3.8
 deps = coverage
 skip_install = true
-commands =
-    coverage report
+commands = coverage report
