--- a/.github/workflows/master.pull_request.workflow.yaml
+++ b/.github/workflows/master.pull_request.workflow.yaml
@@ -15,7 +15,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: ["3.6", "3.7", "3.8"]
+        python-version: ["3.6", "3.7", "3.8", "3.9", "pypy3"]
 
     steps:
       - uses: "actions/checkout@v2"
@@ -31,7 +31,6 @@ jobs:
           python -m pip install --upgrade coverage[toml] virtualenv tox tox-gh-actions
       - name: "Run tox targets for ${{ matrix.python-version }}"
         run: |
-          export YACFG_PROJECT_ROOT=$PWD
           tox
       - name: "Get coverage"
         run: |
@@ -46,7 +45,6 @@ jobs:
       - name: "Build package"
         run: |
           set -xe
-          sed -i "s/VERSION =.*/VERSION = 'PR-$GITHUB_SHA::8'/g" ./src/yacfg/meta.py
           python setup.py sdist bdist_wheel
       - name: "Upload dist artifacts"
         if: always()
