--- a/.github/workflows/master.push.workflow.yaml
+++ b/.github/workflows/master.push.workflow.yaml
@@ -17,7 +17,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: ["3.6", "3.7", "3.8"]
+        python-version: ["3.6", "3.7", "3.8", "3.9", "pypy3"]
 
     steps:
       - uses: "actions/checkout@v2"
@@ -47,7 +47,6 @@ jobs:
         id: build
         run: |
           set -xe
-          sed -i "s/VERSION =.*/VERSION = 'master-$GITHUB_SHA::8'/g" ./src/yacfg/meta.py
           python setup.py sdist bdist_wheel
       - name: "Upload dist artifacts"
         if: always()
@@ -61,11 +60,11 @@ jobs:
         with:
           name: docs_html
           path: docs/_build/html
-      - name: "Publish package to TestPyPI"
-        if: "contains(env.TESTPYPI_PUBLISH, matrix.python-version)"
-        uses: pypa/gh-action-pypi-publish@v1.3.1
-        with:
-          skip_existing: true
-          user: __token__
-          password: ${{ secrets.TESTPYPI_TOKEN }}
-          repository_url: https://test.pypi.org/legacy/
+#      - name: "Publish package to TestPyPI"
+#        if: "contains(env.TESTPYPI_PUBLISH, matrix.python-version)"
+#        uses: pypa/gh-action-pypi-publish@v1.3.1
+#        with:
+#          skip_existing: true
+#          user: __token__
+#          password: ${{ secrets.TESTPYPI_TOKEN }}
+#          repository_url: https://test.pypi.org/legacy/
