--- a/tox.ini
+++ b/tox.ini
@@ -19,9 +19,9 @@ max-complexity = 10
 [gh-actions]
 python =
     3.6: py36
-    3.7: py37, docs
-    3.8: py38, flake8, yaml, mypy, manifest
-    3.9: py39, flake8, yaml, mypy, manifest
+    3.7: py37
+    3.8: py38, flake8, yaml, mypy, manifest, docs
+    3.9: py39
     pypy3: pypy3
 
 [testenv]
