FIX(tox) Change docs build to Python 3.9

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = yaml, flake8, py36, py37, py38, mypy, docs, manifest, coverage-report
+envlist = yaml, flake8, py36, py37, py38, pypy3, mypy, docs, manifest, coverage-report
 toxworkdir=/tmp/.tox.yacfg/
 
 [pytest]
@@ -19,8 +19,8 @@ max-complexity = 10
 [gh-actions]
 python =
     3.6: py36
-    3.7: py37
-    3.8: py38, flake8, yaml, mypy, manifest, docs
+    3.7: py37, docs
+    3.8: py38, flake8, yaml, mypy, manifest
     3.9: py39
     pypy3: pypy3
 
@@ -78,7 +78,7 @@ commands = bash profile_test.sh
 [testenv:docs]
 description = Build docs
 changedir = .
-basepython = python3.8
+basepython = python3.7
 extras = docs
 deps = jupyter-book
 commands = jupyter-book build ./docs
